feat(gridplus): unstub onboarding

--- a/static/manifest.json
+++ b/static/manifest.json
@@ -28,7 +28,7 @@
     }
   ],
   "content_security_policy": {
-    "extension_pages": "frame-ancestors 'none'; script-src 'self'; object-src 'self'; connect-src 'self'"
+    "extension_pages": "frame-ancestors 'none'; script-src 'self' 'wasm-unsafe-eval'; object-src 'self'; connect-src 'self'"
   },
   "default_locale": "en_US",
   "description": "DEV VERSION",
