--- a/package.json
+++ b/package.json
@@ -152,6 +152,7 @@
     "react-switch": "7.0.0",
     "socket.io-client": "4.5.3",
     "validator": "13.9.0",
+    "viem": "1.20.0",
     "wagmi": "0.12.19",
     "word-wrap": "1.2.4",
     "zustand": "4.1.5"
@@ -309,7 +310,9 @@
       "web-ext>ws>bufferutil": false,
       "web-ext>ws>utf-8-validate": false,
       "@ledgerhq/domain-service>eip55>keccak": false,
-      "wagmi>@wagmi/core>@wagmi/connectors>@coinbase/wallet-sdk>keccak": false
+      "wagmi>@wagmi/core>@wagmi/connectors>@coinbase/wallet-sdk>keccak": false,
+      "viem>ws>bufferutil": false,
+      "viem>ws>utf-8-validate": false
     }
   }
 }
