--- a/package.json
+++ b/package.json
@@ -153,6 +153,7 @@
     "validator": "13.9.0",
     "viem": "1.20.0",
     "wagmi": "0.12.19",
+    "@wagmi/core": "1.4.12",
     "word-wrap": "1.2.4",
     "zustand": "4.1.5"
   },
@@ -311,7 +312,9 @@
       "@ledgerhq/domain-service>eip55>keccak": false,
       "wagmi>@wagmi/core>@wagmi/connectors>@coinbase/wallet-sdk>keccak": false,
       "viem>ws>bufferutil": false,
-      "viem>ws>utf-8-validate": false
+      "viem>ws>utf-8-validate": false,
+      "@wagmi/core>@wagmi/connectors>@coinbase/wallet-sdk>@solana/web3.js>bigint-buffer": false,
+      "@wagmi/core>@wagmi/connectors>@coinbase/wallet-sdk>keccak": false
     }
   }
 }
