--- a/package.json
+++ b/package.json
@@ -260,7 +260,8 @@
     "crypto-js": "4.2.0",
     "yaml": "2.2.2",
     "browserify-sign": "4.2.2",
-    "axios": "1.6.1"
+    "axios": "1.6.1",
+    "follow-redirects": "1.15.4"
   },
   "lavamoat": {
     "allowScripts": {
