--- a/package.json
+++ b/package.json
@@ -154,6 +154,7 @@
     "viem": "1.20.3",
     "wagmi": "0.12.19",
     "word-wrap": "1.2.4",
+    "zod": "3.22.4",
     "zustand": "4.1.5"
   },
   "devDependencies": {
