fix: remove .zip from artifact names to prevent .zip.zip

--- a/.github/actions/testsSetup/action.yml
+++ b/.github/actions/testsSetup/action.yml
@@ -21,7 +21,7 @@ runs:
   - name: Download build artifacts
     uses: actions/download-artifact@v3
     with:
-        name: rainbowbx-${{ github.sha }}.zip
+        name: rainbowbx-${{ github.sha }}
         path: build
   - name: Setup xvfb
     shell: 'bash'
