--- a/.github/workflows/publish-prod-chrome.yml
+++ b/.github/workflows/publish-prod-chrome.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Archive the build artifact
         uses: actions/upload-artifact@v4
         with:
-          name: rainbowbx-chrome-v${{ env.release_version }}.zip
+          name: rainbowbx-chrome-v${{ env.release_version }}
           path: build/
       - name: Zip it
         run: yarn zip
