--- a/.github/workflows/publish-prod-firefox.yml
+++ b/.github/workflows/publish-prod-firefox.yml
@@ -38,7 +38,7 @@ jobs:
       - name: Archive the build artifact
         uses: actions/upload-artifact@v4
         with:
-          name: rainbowbx-firefox-v${{ env.release_version }}.zip
+          name: rainbowbx-firefox-v${{ env.release_version }}
           path: build/
       - name: Zip it
         run: yarn firefox:zip
