--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -88,7 +88,7 @@ jobs:
         run: |
             export BROWSER=firefox
             export OS=linux
-            export FIREFOX_BIN=/opt/hostedtoolcache/firefox/latest-devedition/x64/firefox
+            export FIREFOX_BIN="$(pwd)/firefox/firefox"
             yarn firefox:manifest && yarn firefox:zip
             yarn vitest:parallel --retry=5
       - name: Upload deps artifacts
@@ -122,7 +122,7 @@ jobs:
   #         command: |
   #           export BROWSER=firefox
   #           export OS=linux
-  #           export FIREFOX_BIN=/opt/hostedtoolcache/firefox/latest-devedition/x64/firefox
+  #           export FIREFOX_BIN="$(pwd)/firefox/firefox"
   #           yarn firefox:manifest && yarn firefox:zip
   #           yarn vitest:swap --retry=5
   #     - name: Upload deps artifacts
@@ -156,7 +156,7 @@ jobs:
           command: |
             export BROWSER=firefox
             export OS=linux
-            export FIREFOX_BIN=/opt/hostedtoolcache/firefox/latest-devedition/x64/firefox
+            export FIREFOX_BIN="$(pwd)/firefox/firefox"
             yarn firefox:manifest && yarn firefox:zip
             yarn vitest:send --retry=5
       - name: Upload deps artifacts
@@ -190,7 +190,7 @@ jobs:
           command: |
             export BROWSER=firefox
             export OS=linux
-            export FIREFOX_BIN=/opt/hostedtoolcache/firefox/latest-devedition/x64/firefox
+            export FIREFOX_BIN="$(pwd)/firefox/firefox"
             yarn firefox:manifest && yarn firefox:zip
             yarn vitest:dappInteractions --retry=5
       - name: Upload deps artifacts
