--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -495,6 +495,8 @@ jobs:
       - uses: geekyeggo/delete-artifact@v2
         with:
           name: node_modules.tar.gz
+      - name: Anvil Cleanup
+        run: yarn anvil:kill
       - uses: geekyeggo/delete-artifact@v2
         with:
           name: screenshots
