--- a/package.json
+++ b/package.json
@@ -253,7 +253,7 @@
     "socket.io-parser": "4.2.3",
     "tough-cookie": "4.1.3",
     "graphql": "16.8.1",
-    "vite": "4.5.1",
+    "vite": "4.5.2",
     "chai": "4.3.10",
     "supports-color": "5.5.0",
     "postcss": "8.4.31",
@@ -261,7 +261,8 @@
     "yaml": "2.2.2",
     "browserify-sign": "4.2.2",
     "axios": "1.6.1",
-    "follow-redirects": "1.15.4"
+    "follow-redirects": "1.15.4",
+    "ip": "2.0.1"
   },
   "lavamoat": {
     "allowScripts": {
