--- a/package.json
+++ b/package.json
@@ -102,6 +102,7 @@
     "@radix-ui/react-select": "1.2.1",
     "@radix-ui/react-tabs": "1.0.4",
     "@radix-ui/react-tooltip": "1.0.3",
+    "@rainbow-me/provider": "./rainbow-me-provider-v0.0.2.tgz",
     "@rainbow-me/swaps": "0.9.1",
     "@scure/bip39": "1.2.1",
     "@segment/analytics-node": "1.0.0-beta.24",
@@ -152,7 +153,7 @@
     "react-switch": "7.0.0",
     "socket.io-client": "4.5.3",
     "validator": "13.9.0",
-    "viem": "1.20.3",
+    "viem": "2.7.9",
     "wagmi": "0.12.19",
     "word-wrap": "1.2.4",
     "zustand": "4.1.5"
