--- a/package.json
+++ b/package.json
@@ -152,7 +152,7 @@
     "react-switch": "7.0.0",
     "socket.io-client": "4.5.3",
     "validator": "13.9.0",
-    "viem": "1.20.3",
+    "viem": "2.7.13",
     "wagmi": "0.12.19",
     "word-wrap": "1.2.4",
     "zustand": "4.1.5"
@@ -263,7 +263,8 @@
     "browserify-sign": "4.2.2",
     "axios": "1.6.1",
     "follow-redirects": "1.15.4",
-    "ip": "2.0.1"
+    "ip": "2.0.1",
+    "viem": "2.7.13"
   },
   "lavamoat": {
     "allowScripts": {
