--- a/package.json
+++ b/package.json
@@ -214,6 +214,7 @@
     "opentype.js": "1.3.4",
     "patch-package": "6.4.7",
     "prettier": "3.0.2",
+    "react-devtools": "5.0.0",
     "selenium-webdriver": "4.10.0",
     "semver": "7.5.2",
     "supports-color": "5.5.0",
@@ -313,7 +314,9 @@
       "@ledgerhq/domain-service>eip55>keccak": false,
       "wagmi>@wagmi/core>@wagmi/connectors>@coinbase/wallet-sdk>keccak": false,
       "viem>ws>bufferutil": false,
-      "viem>ws>utf-8-validate": false
+      "viem>ws>utf-8-validate": false,
+      "@vanilla-extract/vite-plugin>vite>esbuild": false,
+      "react-devtools>electron": false
     }
   }
 }
