--- a/src/design-system/docs/package.json
+++ b/src/design-system/docs/package.json
@@ -28,7 +28,8 @@
   },
   "resolutions": {
     "semver": "7.5.2",
-    "word-wrap": "1.2.4"
+    "word-wrap": "1.2.4",
+    "core-js-pure": "3.36.0"
   },
   "devDependencies": {
     "@lavamoat/preinstall-always-fail": "2.0.0",
@@ -46,7 +47,7 @@
     "babel-plugin-module-resolver": "4.1.0",
     "babel-plugin-preval": "5.1.0",
     "eslint": "8.24.0",
-    "eslint-config-next": "12.3.1",
+    "eslint-config-next": "12.3.4",
     "eslint-config-prettier": "8.5.0",
     "eslint-config-rainbow": "4.2.0",
     "eslint-plugin-import": "2.26.0",
