--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -100,36 +100,36 @@ jobs:
       - name: Fail if any tests failed
         if: steps.FFE2eParallel.outcome == 'failure'
         run: exit 1
-  firefox-e2e-swap:
-    runs-on: ubuntu-latest
-    timeout-minutes: 25
-    needs: [build]
-    env:
-      DISPLAY: :0
-      VITEST_SEGFAULT_RETRY: 4
-    steps:
-      - uses: actions/checkout@v3
-      - uses: ./.github/actions/firefoxTestsSetup
-        with:
-          gh-access-token: ${{ secrets.DOTENV_GITHUB_ACCESS_TOKEN }}
-      - name: Run e2e parallel (Firefox)
-        id: FFE2eParallel
-        continue-on-error: true
-        run: |
-            export BROWSER=firefox
-            export OS=linux
-            export FIREFOX_BIN="$(pwd)/firefox/firefox"
-            yarn firefox:manifest && yarn firefox:zip
-            yarn vitest:swap --retry=5
-      - name: Upload deps artifacts
-        if: steps.FFE2eSwap.outcome == 'failure'
-        uses: actions/upload-artifact@v3
-        with:
-          name: screenshots
-          path: screenshots/
-      - name: Fail if any tests failed
-        if: steps.FFE2eSwap.outcome == 'failure'
-        run: exit 1
+  # firefox-e2e-swap:
+  #   runs-on: ubuntu-latest
+  #   timeout-minutes: 25
+  #   needs: [build]
+  #   env:
+  #     DISPLAY: :0
+  #     VITEST_SEGFAULT_RETRY: 4
+  #   steps:
+  #     - uses: actions/checkout@v3
+  #     - uses: ./.github/actions/firefoxTestsSetup
+  #       with:
+  #         gh-access-token: ${{ secrets.DOTENV_GITHUB_ACCESS_TOKEN }}
+  #     - name: Run e2e parallel (Firefox)
+  #       id: FFE2eParallel
+  #       continue-on-error: true
+  #       run: |
+  #           export BROWSER=firefox
+  #           export OS=linux
+  #           export FIREFOX_BIN="$(pwd)/firefox/firefox"
+  #           yarn firefox:manifest && yarn firefox:zip
+  #           yarn vitest:swap --retry=5
+  #     - name: Upload deps artifacts
+  #       if: steps.FFE2eSwap.outcome == 'failure'
+  #       uses: actions/upload-artifact@v3
+  #       with:
+  #         name: screenshots
+  #         path: screenshots/
+  #     - name: Fail if any tests failed
+  #       if: steps.FFE2eSwap.outcome == 'failure'
+  #       run: exit 1
   firefox-e2e-send:
     runs-on: send-runner-bx
     timeout-minutes: 20
