--- a/package.json
+++ b/package.json
@@ -265,7 +265,8 @@
     "follow-redirects": "1.15.4",
     "ip": "2.0.1",
     "viem": "1.21.4",
-    "@solana/web3.js": "1.90.0"
+    "@solana/web3.js": "1.90.0",
+    "jose": "4.15.5"
   },
   "lavamoat": {
     "allowScripts": {
