chore: rudderstack sdk migration

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 ALCHEMY_API_KEY=
 ETHERSCAN_API_KEY=
-SEGMENT_WRITE_KEY=
+RUDDERSTACK_WRITE_KEY=
+RUDDERSTACK_DATA_PLANE=
 SENTRY_DSN=
 DATA_API_KEY=
 DATA_ENDPOINT=
