chore: rudderstack analytics migration (#1410)

--- a/package.json
+++ b/package.json
@@ -104,8 +104,8 @@
     "@radix-ui/react-tooltip": "1.0.3",
     "@rainbow-me/provider": "0.0.7",
     "@rainbow-me/swaps": "0.10.0",
+    "@rudderstack/analytics-js-service-worker": "3.0.6",
     "@scure/bip39": "1.2.1",
-    "@segment/analytics-node": "1.0.0-beta.24",
     "@sentry/browser": "7.69.0",
     "@sentry/tracing": "7.69.0",
     "@tanstack/query-async-storage-persister": "4.29.19",
