--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -90,7 +90,7 @@ jobs:
             export OS=linux
             export FIREFOX_BIN="$(pwd)/firefox/firefox"
             yarn firefox:manifest && yarn firefox:zip
-            yarn vitest:parallel --retry=5
+            yarn vitest:parallel
       - name: Upload deps artifacts
         if: steps.FFE2eParallel.outcome == 'failure'
         uses: actions/upload-artifact@v3
@@ -124,7 +124,7 @@ jobs:
   #           export OS=linux
   #           export FIREFOX_BIN="$(pwd)/firefox/firefox"
   #           yarn firefox:manifest && yarn firefox:zip
-  #           yarn vitest:swap --retry=5
+  #           yarn vitest:swap 
   #     - name: Upload deps artifacts
   #       if: steps.FFE2eSwap.outcome == 'failure'
   #       uses: actions/upload-artifact@v3
@@ -158,7 +158,7 @@ jobs:
             export OS=linux
             export FIREFOX_BIN="$(pwd)/firefox/firefox"
             yarn firefox:manifest && yarn firefox:zip
-            yarn vitest:send --retry=5
+            yarn vitest:send 
       - name: Upload deps artifacts
         if: steps.FFE2eSend.outcome == 'failure'
         uses: actions/upload-artifact@v3
@@ -192,7 +192,7 @@ jobs:
             export OS=linux
             export FIREFOX_BIN="$(pwd)/firefox/firefox"
             yarn firefox:manifest && yarn firefox:zip
-            yarn vitest:dappInteractions --retry=5
+            yarn vitest:dappInteractions 
       - name: Upload deps artifacts
         if: steps.FFE2eDappInteractions.outcome == 'failure'
         uses: actions/upload-artifact@v3
@@ -222,7 +222,7 @@ jobs:
           export BROWSER=chrome
           export OS=linux
           export CHROMIUM_BIN=$(find chrome -type f -name 'chrome')
-          yarn vitest:parallel --retry=5
+          yarn vitest:parallel 
       - name: Upload deps artifacts
         if: steps.ChromeE2EParallel.outcome == 'failure'
         uses: actions/upload-artifact@v3
@@ -288,7 +288,7 @@ jobs:
             export BROWSER=chrome
             export OS=linux
             export CHROMIUM_BIN=$(find chrome -type f -name 'chrome')
-            yarn vitest:send --retry=5
+            yarn vitest:send 
       - name: Upload deps artifacts
         if: steps.ChromeE2ESend.outcome == 'failure'
         uses: actions/upload-artifact@v3
@@ -321,7 +321,7 @@ jobs:
             export BROWSER=chrome
             export OS=linux
             export CHROMIUM_BIN=$(find chrome -type f -name 'chrome')
-            yarn vitest:send:optimism --retry=5
+            yarn vitest:send:optimism 
       - name: Upload deps artifacts
         if: steps.ChromeOpE2ESend.outcome == 'failure'
         uses: actions/upload-artifact@v3
@@ -354,7 +354,7 @@ jobs:
             export BROWSER=chrome
             export OS=linux
             export CHROMIUM_BIN=$(find chrome -type f -name 'chrome')
-            yarn vitest:dappInteractions --retry=5
+            yarn vitest:dappInteractions 
       - name: Upload deps artifacts
         if: steps.ChromeE2EDappInteractions.outcome == 'failure'
         uses: actions/upload-artifact@v3
