--- a/package.json
+++ b/package.json
@@ -153,6 +153,7 @@
     "socket.io-client": "4.5.3",
     "validator": "13.9.0",
     "viem": "1.21.4",
+    "vite": "4.5.3",
     "wagmi": "0.12.19",
     "word-wrap": "1.2.4",
     "zustand": "4.1.5"
