--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -307,6 +307,35 @@ jobs:
       - name: Fail if any tests failed
         if: steps.ChromeOpE2ESend.outcome == 'failure'
         run: exit 1
+  chrome-polygon-e2e-send:
+    runs-on: send-runner-bx
+    timeout-minutes: 25
+    needs: [build]
+    env:
+      DISPLAY: :0
+      VITEST_SEGFAULT_RETRY: 3
+    steps:
+      - uses: actions/checkout@v3
+      - uses: ./.github/actions/chromeTestsSetup
+        with:
+          gh-access-token: ${{ secrets.DOTENV_GITHUB_ACCESS_TOKEN }}
+      - name: Run Polygon e2e send (Chrome)
+        id: ChromePolygonE2ESend
+        continue-on-error: true
+        run: |
+          export BROWSER=chrome
+          export OS=linux
+          export CHROMIUM_BIN=$(find chrome -type f -name 'chrome')
+          yarn vitest:send:polygon
+      - name: Upload deps artifacts
+        if: steps.ChromeOpE2ESend.outcome == 'failure'
+        uses: actions/upload-artifact@v3
+        with:
+          name: screenshots
+          path: screenshots/
+      - name: Fail if any tests failed
+        if: steps.ChromePolygonE2ESend.outcome == 'failure'
+        run: exit 1
   chrome-e2e-dappInteractions:
     runs-on: dapp-interactions-runner-bx
     timeout-minutes: 25
@@ -454,7 +483,7 @@ jobs:
         run: yarn typecheck
   cleanup:
     runs-on:  ubuntu-latest
-    needs: [firefox-e2e-parallel, firefox-e2e-send, firefox-e2e-dappInteractions, chrome-e2e-parallel, chrome-e2e-swap, chrome-e2e-send, chrome-e2e-dappInteractions, chrome-optimism-e2e-send, unit-tests, ci-checks]
+    needs: [firefox-e2e-parallel, firefox-e2e-send, firefox-e2e-dappInteractions, chrome-e2e-parallel, chrome-e2e-swap, chrome-e2e-send, chrome-e2e-dappInteractions, chrome-optimism-e2e-send, chrome-polygon-e2e-send, unit-tests, ci-checks]
     steps:
       - uses: geekyeggo/delete-artifact@v2
         with:
