--- a/.github/workflows/publish-prod-chrome.yml
+++ b/.github/workflows/publish-prod-chrome.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Archive the build artifact
         uses: actions/upload-artifact@v3
         with:
-          name: rainbowbx-chrome-v${{ env.release_version }}.zip
+          name: rainbowbx-chrome-v${{ env.release_version }}
           path: build/
       - name: Zip it
         run: yarn zip
@@ -45,14 +45,6 @@ jobs:
         with:
           artifact: ./rainbowbx.zip
           keys: ${{ secrets.BPP_KEYS_PROD }}
-      
-      - name: Commit changes
-        uses: EndBug/add-and-commit@v9
-        with:
-          message: Version Bump (Production) - v${{ env.release_version }}
-          committer_name: GitHub Actions
-          committer_email: actions@github.com
-          add: '*.json'
       - name: Create Sentry release
         uses: getsentry/action-release@v1
         env:
