--- a/package.json
+++ b/package.json
@@ -108,10 +108,10 @@
     "@scure/bip39": "1.2.1",
     "@sentry/browser": "7.69.0",
     "@sentry/tracing": "7.69.0",
-    "@tanstack/query-async-storage-persister": "4.29.19",
+    "@tanstack/query-async-storage-persister": "5.35.1",
     "@tanstack/react-query": "5.35.1",
-    "@tanstack/react-query-persist-client": "4.29.19",
-    "@tanstack/react-virtual": "3.0.0-beta.54",
+    "@tanstack/react-query-persist-client": "5.35.1",
+    "@tanstack/react-virtual": "3.5.0",
     "@trezor/connect-plugin-ethereum": "9.0.2",
     "@types/qs": "6.9.7",
     "@vanilla-extract/css": "1.9.1",
