add env to yml unit test

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -404,6 +404,16 @@ jobs:
           name: node_modules.tar.gz
       - name: Unzip node_modules
         run: tar xzf node_modules.tar.gz
+      - uses: actions/checkout@v3
+        with:
+            repository: 'rainbow-me/browser-extension-env'
+            token: ${{ secrets.DOTENV_GITHUB_ACCESS_TOKEN }}
+            path: tmp
+      - name: Copy dotenv
+        run: cat tmp/dotenv >> .env && rm -rf tmp
+      - name: Set IS_TESTING=true
+        run: |
+          sed -i 's/IS_TESTING.*/IS_TESTING=true/g' .env
       - name: Install rust
         uses: actions-rs/toolchain@v1
         with:
