Action fetch network

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -60,6 +60,8 @@ jobs:
           sed -i 's/IS_TESTING.*/IS_TESTING=true/g' .env
       - name: Graphql Setup
         run: yarn graphql-setup
+      - name: Fetch networks
+        run: yarn fetch:networks
       - name: Build the extension
         run: yarn build:webpack
       - name: Upload artifacts
@@ -413,6 +415,8 @@ jobs:
           override: true
       - name: Graphql Setup
         run: yarn graphql-setup
+      - name: Fetch networks
+        run: yarn fetch:networks
       - name: Install Anvil
         uses: foundry-rs/foundry-toolchain@v1
         with:
@@ -449,6 +453,8 @@ jobs:
         run: yarn ds:install
       - name: Graphql Setup
         run: yarn graphql-setup
+      - name: Fetch networks
+        run: yarn fetch:networks
       - name: Lint
         run: yarn lint
       - name: Audit CI
