--- a/.github/workflows/publish-internal.yml
+++ b/.github/workflows/publish-internal.yml
@@ -12,14 +12,18 @@ jobs:
     concurrency: 
       group: ${{ github.workflow }}-${{ github.ref }}
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
         with:
           repository: ${{ github.event.pull_request.head.repo.full_name }}
           ref: ${{ github.event.pull_request.head.ref }}
           token: ${{ secrets.REPO_TOKEN }}
-      - name: Check Last Commit Message
-        uses: ./.github/actions/check-commit-message.yml
+      - name: Check for new commits
+        run: |
+          last_commit=$(git log -1 --pretty=%B)
+          if [[ "$last_commit" == *"Version Bump (Internal)"* ]]; then
+            echo "No new commits. Canceling publish..."
+            exit 1
+          fi
       - uses: actions/setup-node@v2
         with:
           node-version: "18.18.0"
@@ -74,4 +78,3 @@ jobs:
           sourcemaps: ./build
           version: ${{ env.release_version }}
           url_prefix: 'chrome-extension://kajddphdgkbiifcaichanbfjgmfaneem'
-          
