--- a/package.json
+++ b/package.json
@@ -268,7 +268,8 @@
     "viem": "1.21.4",
     "@solana/web3.js": "1.90.2",
     "jose": "4.15.5",
-    "phin": "3.7.1"
+    "phin": "3.7.1",
+    "braces": "3.0.3"
   },
   "lavamoat": {
     "allowScripts": {
