--- a/.github/workflows/publish-internal.yml
+++ b/.github/workflows/publish-internal.yml
@@ -17,6 +17,13 @@ jobs:
           repository: ${{ github.event.pull_request.head.repo.full_name }}
           ref: ${{ github.event.pull_request.head.ref }}
           token: ${{ secrets.REPO_TOKEN }}
+      - name: Check for new commits
+        run: |
+          last_commit=$(git log -1 --pretty=%B)
+          if [[ "$last_commit" == *"Version Bump (Internal)"* ]]; then
+            echo "No new commits. Canceling publish..."
+            exit 1
+          fi
       - uses: actions/setup-node@v2
         with:
           node-version: "18.18.0"
