chore: env types, env example updates (#1552)

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,56 @@
-ALCHEMY_API_KEY=
+# Mainnet RPCs
+ARBITRUM_MAINNET_RPC=
+AVALANCHE_MAINNET_RPC=
+BASE_MAINNET_RPC=
+BLAST_MAINNET_RPC=
+BSC_MAINNET_RPC=
+DEGEN_MAINNET_RPC=
+ETH_MAINNET_RPC=
+OPTIMISM_MAINNET_RPC=
+POLYGON_MAINNET_RPC=
+ZORA_MAINNET_RPC=
+
+# Testnet RPCs
+ARBITRUM_SEPOLIA_RPC=
+AVALANCHE_FUJI_RPC=
+BASE_SEPOLIA_RPC=
+BLAST_SEPOLIA_RPC=
+BSC_TESTNET_RPC=
+ETH_HOLESKY_RPC=
+ETH_SEPOLIA_RPC=
+OPTIMISM_SEPOLIA_RPC=
+POLYGON_AMOY_RPC=
+ZORA_SEPOLIA_RPC=
+
+# Services
+ADDYS_API_KEY=
+DATA_API_KEY=
+DATA_ENDPOINT=
 ETHERSCAN_API_KEY=
+IMGIX_DOMAIN=
+IMGIX_TOKEN=
+NFT_API_KEY=
+NFT_API_URL=
+RAINBOW_METADATA_API_TOKEN=
+RPC_PROXY_API_KEY=
+RPC_PROXY_BASE_URL=
+RPC_PROXY_ENABLED=false
+
+# Firebase Remote Config
+FIREBASE_API_KEY_BX=
+FIREBASE_AUTH_DOMAIN_BX=
+FIREBASE_PROJECT_ID_BX=
+FIREBASE_SENDER_ID_BX=
+FIREBASE_APP_ID_BX=
+FIREBASE_VAPID_BX=
+
+# Telemetry
 RUDDERSTACK_WRITE_KEY=
 RUDDERSTACK_DATA_PLANE=
 SENTRY_DSN=
-DATA_API_KEY=
-DATA_ENDPOINT=
-DATA_ORIGIN=
-LOG_LEVEL=
-LOG_DEBUG=
+
+# Development
+IS_DEV=false
+IS_TESTING=false
+LOG_DEBUG= # Optional
+LOG_LEVEL=error
