--- a/package.json
+++ b/package.json
@@ -271,7 +271,8 @@
     "@solana/web3.js": "1.90.2",
     "jose": "4.15.5",
     "phin": "3.7.1",
-    "braces": "3.0.3"
+    "braces": "3.0.3",
+    "ws": "8.17.1"
   },
   "lavamoat": {
     "allowScripts": {
