--- a/.github/workflows/publish-internal.yml
+++ b/.github/workflows/publish-internal.yml
@@ -41,14 +41,11 @@ jobs:
         with:
           repository: 'rainbow-me/browser-extension-action'
           token: ${{ secrets.ACTION_GITHUB_ACCESS_TOKEN }}
-          path: tmp
+          path: ./.github/actions/private
+      - name: Run browser-extension-action private actions
+        uses: ./.github/actions/private/browser-extension-action.yml
       - name: Mark the build as internal
         run: echo "INTERNAL_BUILD=true" >> .env
-      - name: Run browser-extension-action
-        run: |
-          cd tmp
-          gh workflow run browser-extension-action.yml
-          cd .. && rm -rf tmp
       - name: Bump the version
         run: yarn bump
       - name: Fetch the current version number
