--- a/.github/workflows/publish-internal.yml
+++ b/.github/workflows/publish-internal.yml
@@ -44,7 +44,7 @@ jobs:
           ref: '@daniel/refactor'
           path: ./.github/actions/private
       - name: Run browser-extension-action private actions
-        uses: ./.github/actions/private/browser-extension-action.yml
+        uses: ./.github/actions/private/internal-build
       - name: Mark the build as internal
         run: echo "INTERNAL_BUILD=true" >> .env
       - name: Bump the version
