chore: add `GRAPH_ENS_API_KEY` and new api endpoint
chore: add `GRAPH_ENS_API_KEY` and new api endpoint

fix: export GRAPH_ENS_API_KEY inline codegen during setup

--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "// GraphQL scripts": "",
     "graphql-setup": "yarn graphql-codegen:install && yarn graphql-codegen",
     "graphql-codegen:install": "yarn install --cwd src/core/graphql",
-    "graphql-codegen": "cd src/core/graphql && yarn codegen",
+    "graphql-codegen": "export GRAPH_ENS_API_KEY=$(grep GRAPH_ENS_API_KEY .env | cut -d '=' -f2) && cd src/core/graphql && yarn codegen",
     "ds:install": "yarn install --cwd src/design-system/docs",
     "ds": "cd src/design-system/docs && yarn dev",
     "ds:build": "cd src/design-system/docs && yarn build",
