fix: add graphql-tag dependency

--- a/package.json
+++ b/package.json
@@ -134,6 +134,7 @@
     "firebase": "9.18.0",
     "framer-motion": "10.2.3",
     "graphql-request": "5.2.0",
+    "graphql-tag": "^2.11.0",
     "i18n-js": "4.1.1",
     "idna-uts46-hx": "3.5.0",
     "imgix-core-js": "2.3.2",
