--- a/package.json
+++ b/package.json
@@ -162,9 +162,11 @@
   },
   "devDependencies": {
     "@foundry-rs/hardhat-anvil": "0.1.7",
+    "@graphql-eslint/eslint-plugin": "3.10.7",
     "@lavamoat/allow-scripts": "3.0.1",
     "@lavamoat/preinstall-always-fail": "2.0.0",
     "@peculiar/webcrypto": "1.4.1",
+    "@sentry/node": "8.13.0",
     "@testing-library/react": "13.4.0",
     "@total-typescript/ts-reset": "0.4.2",
     "@types/chroma-js": "2.1.4",
@@ -230,8 +232,7 @@
     "webpack-bundle-analyzer": "4.8.0",
     "webpack-cli": "5.1.4",
     "webpack-extension-reloader": "rainbow-me/webpack-extension-reloader#23fc3ed1f59f295702d459ad58aec90d6f0a3551",
-    "worker-loader": "3.0.8",
-    "@graphql-eslint/eslint-plugin": "3.10.7"
+    "worker-loader": "3.0.8"
   },
   "resolutions": {
     "tar": "6.2.1",
