--- a/package.json
+++ b/package.json
@@ -119,6 +119,7 @@
     "@vanilla-extract/css-utils": "0.1.2",
     "@vanilla-extract/dynamic": "2.0.2",
     "@vanilla-extract/sprinkles": "1.5.0",
+    "axios": "1.7.3",
     "bignumber.js": "9.0.1",
     "buffer": "6.0.3",
     "check-password-strength": "2.0.7",
