they updated the package!

--- a/audit-ci.jsonc
+++ b/audit-ci.jsonc
@@ -13,7 +13,6 @@
     "GHSA-353f-5xf4-qw67",
     "GHSA-j8xg-fqg3-53r7",
     "GHSA-67hx-6x53-jw92",
-    "GHSA-c24v-8rfc-w8vw",
-    "GHSA-8hc4-vh64-cxmj"
+    "GHSA-c24v-8rfc-w8vw"
   ]
 }
