--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -69,8 +69,8 @@ jobs:
           path: build/
       - name: Remove old screenshots
         run: rm -rf screenshots/*
-  # FIREFOX TESTS
-  firefox-e2e-parallel:
+  # CHROME TESTS
+  chrome-e2e-onboarding:
     runs-on: ubuntu-latest
     timeout-minutes: 18
     needs: [build]
@@ -79,118 +79,26 @@ jobs:
       VITEST_SEGFAULT_RETRY: 4
     steps:
       - uses: actions/checkout@v3
-      - uses: ./.github/actions/firefoxTestsSetup
+      - uses: ./.github/actions/chromeTestsSetup
         with:
           gh-access-token: ${{ secrets.DOTENV_GITHUB_ACCESS_TOKEN }}
-      - name: Run e2e parallel (Firefox)
-        id: FFE2eParallel
+      - name: Run e2e onboarding (Chrome)
+        id: ChromeE2EOnboarding
         continue-on-error: true
         run: |
-            export BROWSER=firefox
-            export OS=linux
-            export FIREFOX_BIN="$(pwd)/firefox/firefox"
-            yarn firefox:manifest && yarn firefox:zip
-            yarn vitest:parallel
-      - name: Upload deps artifacts
-        if: steps.FFE2eParallel.outcome == 'failure'
-        uses: actions/upload-artifact@v3
-        with:
-          name: screenshots
-          path: screenshots/
-      - name: Fail if any tests failed
-        if: steps.FFE2eParallel.outcome == 'failure'
-        run: exit 1
-  # firefox-e2e-swap:
-  #   runs-on: swaps-runner-bx
-  #   timeout-minutes: 25
-  #   needs: [build]
-  #   env:
-  #     DISPLAY: :0
-  #     VITEST_SEGFAULT_RETRY: 4
-  #   steps:
-  #     - uses: actions/checkout@v3
-  #     - uses: ./.github/actions/firefoxTestsSetup
-  #       with:
-  #         gh-access-token: ${{ secrets.DOTENV_GITHUB_ACCESS_TOKEN }}
-  #     - name: Run e2e Swap (Firefox)
-  #       id: FFE2eSwap
-  #       continue-on-error: true
-  #       run: |
-  #         export BROWSER=firefox
-  #         export OS=linux
-  #         export FIREFOX_BIN="$(pwd)/firefox/firefox"
-  #         yarn firefox:manifest && yarn firefox:zip
-  #         yarn vitest:swap
-  #     - name: Upload deps artifacts
-  #       if: steps.FFE2eSwap.outcome == 'failure'
-  #       uses: actions/upload-artifact@v3
-  #       with:
-  #         name: screenshots
-  #         path: screenshots/
-  #     - name: Fail if any tests failed
-  #       if: steps.FFE2eSwap.outcome == 'failure'
-  #       run: exit 1
-  firefox-e2e-send:
-    runs-on: send-runner-bx
-    timeout-minutes: 16
-    needs: [build]
-    env:
-      DISPLAY: :0
-      VITEST_SEGFAULT_RETRY: 4
-    steps:
-      - uses: actions/checkout@v3
-      - uses: ./.github/actions/firefoxTestsSetup
-        with:
-          gh-access-token: ${{ secrets.DOTENV_GITHUB_ACCESS_TOKEN }}
-      - name: Run e2e Send (Firefox)
-        id: FFE2eSend
-        continue-on-error: true
-        run: |
-          export BROWSER=firefox
+          export BROWSER=chrome
           export OS=linux
-          export FIREFOX_BIN="$(pwd)/firefox/firefox"
-          yarn firefox:manifest && yarn firefox:zip
-          yarn vitest:send
+          export CHROMIUM_BIN=$(find chrome -type f -name 'chrome')
+          yarn vitest:onboarding
       - name: Upload deps artifacts
-        if: steps.FFE2eSend.outcome == 'failure'
+        if: steps.ChromeE2EOnboarding.outcome == 'failure'
         uses: actions/upload-artifact@v3
         with:
           name: screenshots
           path: screenshots/
       - name: Fail if any tests failed
-        if: steps.FFE2eSend.outcome == 'failure'
+        if: steps.ChromeE2EParallel.outcome == 'failure'
         run: exit 1
-  firefox-e2e-dappInteractions:
-    runs-on: dapp-interactions-runner-bx
-    timeout-minutes: 25
-    needs: [build]
-    env:
-      DISPLAY: :0
-      VITEST_SEGFAULT_RETRY: 4
-    steps:
-      - uses: actions/checkout@v3
-      - uses: ./.github/actions/firefoxTestsSetup
-        with:
-          gh-access-token: ${{ secrets.DOTENV_GITHUB_ACCESS_TOKEN }}
-      - name: Run e2e Dapp Interactions (Firefox)
-        id: FFE2eDappInteractions
-        continue-on-error: true
-        run: |
-          export BROWSER=firefox
-          export OS=linux
-          export FIREFOX_BIN="$(pwd)/firefox/firefox"
-          yarn firefox:manifest && yarn firefox:zip
-          yarn vitest:dappInteractions
-      - name: Upload deps artifacts
-        if: steps.FFE2eDappInteractions.outcome == 'failure'
-        uses: actions/upload-artifact@v3
-        with:
-          name: screenshots
-          path: screenshots/
-      - name: Fail if any tests failed
-        if: steps.FFE2eDappInteractions.outcome == 'failure'
-        run: exit 1
-  # CHROME TESTS
   chrome-e2e-parallel:
     runs-on: ubuntu-latest
     timeout-minutes: 18
@@ -336,59 +244,6 @@ jobs:
       - name: Fail if any tests failed
         if: steps.ChromeE2EDappInteractions.outcome == 'failure'
         run: exit 1
-  # BRAVE TESTS
-  # brave-e2e:
-  #   needs: [build]
-  #   runs-on: ubuntu-latest
-  #   timeout-minutes: 20
-  #   env:
-  #     DISPLAY: :0
-  #     VITEST_SEGFAULT_RETRY: 3
-  #   steps:
-  #     - uses: actions/checkout@v3
-  #     - uses: actions/setup-node@v3
-  #       with:
-  #         node-version: "18.18.0"
-  #     - name: Download deps cache artifacts
-  #       uses: actions/download-artifact@v3
-  #       with:
-  #         name: node_modules.tar.gz
-  #     - name: Unzip node_modules
-  #       run: tar xzvf node_modules.tar.gz
-  #     - name: Download build artifacts
-  #       uses: actions/download-artifact@v3
-  #       with:
-  #         name: rainbowbx-${{ github.sha }}
-  #         path: build
-  #     - name: Setup xvfb
-  #       run: |
-  #         sudo apt-get install -y xvfb libxkbcommon-x11-0 libxcb-icccm4 libxcb-image0 libxcb-keysyms1 libxcb-randr0 libxcb-render-util0 libxcb-xinerama0 libxcb-xinput0 libxcb-xfixes0
-  #         # start xvfb in the background
-  #         sudo /usr/bin/Xvfb $DISPLAY -screen 0 1280x1024x24 &
-  #     - name: Setup Brave browser
-  #       run: |
-  #         sudo apt install apt-transport-https curl
-  #         sudo curl -fsSLo /usr/share/keyrings/brave-browser-archive-keyring.gpg https://brave-browser-apt-release.s3.brave.com/brave-browser-archive-keyring.gpg
-  #         echo "deb [signed-by=/usr/share/keyrings/brave-browser-archive-keyring.gpg arch=amd64] https://brave-browser-apt-release.s3.brave.com/ stable main"|sudo tee /etc/apt/sources.list.d/brave-browser-release.list
-  #         sudo apt update
-  #         sudo apt install brave-browser
-  #     - name: Install Anvil
-  #       uses: foundry-rs/foundry-toolchain@v1
-  #       with:
-  #         version: nightly
-  #     - uses: actions/checkout@v3
-  #       with:
-  #           repository: 'rainbow-me/browser-extension-env'
-  #           token: ${{ secrets.DOTENV_GITHUB_ACCESS_TOKEN }}
-  #           path: tmp
-  #     - name: Copy dotenv
-  #       run: cat tmp/dotenv >> .env && rm -rf tmp
-  #     - name: Run e2e (Brave)
-  #       run:  |
-  #        export BROWSER=brave
-  #         export OS=linux
-  #         export BRAVE_BIN='/usr/bin/brave-browser-stable'
-  #         yarn vitest:parallel && yarn vitest:serial
   # UNIT TESTS
   unit-tests:
     runs-on: ubuntu-latest
@@ -457,7 +312,7 @@ jobs:
         run: yarn typecheck
   cleanup:
     runs-on:  ubuntu-latest
-    needs: [firefox-e2e-parallel, firefox-e2e-send, firefox-e2e-dappInteractions, chrome-e2e-parallel, chrome-e2e-swap, chrome-e2e-send, chrome-e2e-dappInteractions, chrome-optimism-e2e-send, unit-tests, ci-checks]
+    needs: [chrome-e2e-onboarding, chrome-e2e-parallel, chrome-e2e-swap, chrome-e2e-send, chrome-e2e-dappInteractions, chrome-optimism-e2e-send, unit-tests, ci-checks]
     steps:
       - uses: geekyeggo/delete-artifact@v2
         with:
